force-app/main/default/objects/Coupon__c/fields/Apply_Till__c.field-meta.xml
<CustomField>
    <fullName>Apply_Till__c</fullName>
    <description>CB Apply Till</description>
    <label>Apply Till</label>
    <length>50</length>
    <type>Text</type>
</CustomField>