force-app/main/default/objects/Coupon__c/fields/CB_Coupon_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Coupon_Id__c</fullName>
    <label>CB Coupon Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>