force-app/main/default/objects/Coupon__c/fields/CB_Site__c.field-meta.xml
<CustomField>
    <fullName>CB_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB Site</label>
    <referenceTo>CB_Sites__c</referenceTo>
    <relationshipLabel>CB Coupons</relationshipLabel>
    <relationshipName>CB_Coupons</relationshipName>
    <type>Lookup</type>
</CustomField>