force-app/main/default/objects/Coupon__c/fields/ChargeBee_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>ChargeBee_Modified_Time__c</fullName>
    <description>ChargeBee Modified Time</description>
    <label>ChargeBee Modified Time</label>
    <type>DateTime</type>
</CustomField>