force-app/main/default/objects/Coupon__c/fields/Coupon_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Created_At__c</fullName>
    <description>CB Coupon Created At</description>
    <label>Coupon Created At</label>
    <type>DateTime</type>
</CustomField>