force-app/main/default/objects/Coupon__c/fields/Coupon_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Coupon Id</description>
    <externalId>true</externalId>
    <label>Coupon Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>