force-app/main/default/objects/Coupon__c/fields/Duration_Month__c.field-meta.xml
<CustomField>
    <fullName>Duration_Month__c</fullName>
    <description>CB Duration Month</description>
    <label>Duration Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>