force-app/main/default/objects/Coupon__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <description>Invoice name in coupon</description>
    <inlineHelpText>Invoice name</inlineHelpText>
    <label>Invoice Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>