force-app/main/default/objects/Coupon__c/fields/Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Valid_Till__c</fullName>
    <description>Valid Till</description>
    <label>Valid Till</label>
    <type>DateTime</type>
</CustomField>