force-app/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discount_Type__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Discount_Percentage__c</columns>
    <columns>Discount_Quantity__c</columns>
    <columns>Redemptions__c</columns>
    <columns>Valid_Till__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>