force-app/main/default/objects/Coupon__c/listViews/CB_Coupon.listView-meta.xml
<ListView>
    <fullName>CB_Coupon</fullName>
    <columns>NAME</columns>
    <columns>Coupon_Id__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Valid_Till__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>CB Coupon</label>
</ListView>